[gd_scene load_steps=4 format=2]

[ext_resource path="res://2d_example/character/character.tscn" type="PackedScene" id=1]
[ext_resource path="res://2d_example/main.gd" type="Script" id=2]
[ext_resource path="res://2d_example/map/map.tscn" type="PackedScene" id=3]

[node name="main" type="Node"]
script = ExtResource( 2 )

[node name="map" parent="." instance=ExtResource( 3 )]

[node name="character" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="Control" type="Control" parent="Control/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CanvasLayer/Control"]
anchor_right = 1.0
margin_bottom = 14.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/CanvasLayer/Control/VBoxContainer"]
margin_right = 600.0
margin_bottom = 270.0
rect_min_size = Vector2( 0, 270 )
mouse_filter = 2

[node name="player_pos" type="Label" parent="Control/CanvasLayer/Control/VBoxContainer"]
margin_top = 274.0
margin_right = 600.0
margin_bottom = 288.0
align = 1
valign = 1

[node name="current_chunk" type="Label" parent="Control/CanvasLayer/Control/VBoxContainer"]
margin_top = 292.0
margin_right = 600.0
margin_bottom = 306.0
align = 1
valign = 1

[node name="back" type="Button" parent="Control/CanvasLayer/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
size_flags_horizontal = 4
text = "back"

[connection signal="pressed" from="Control/CanvasLayer/Control/back" to="." method="_on_back_pressed"]
